--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -358,3 +358,6 @@ ul.timeline.notification-list>li>.timeline-item>.timeline-header>span.comment-hl
     .navbar-custom-menu>.navbar-nav>li>.dropdown-menu { right: 3%; }
  }
  /*Responsive CSS end*/
+ .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+     text-align: center;
+ }
