--- a/resources/assets/sass/backend/_products.scss
+++ b/resources/assets/sass/backend/_products.scss
@@ -32,6 +32,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    text-align: center;
   }
 }
 .product-list-in-box > .item {
