--- a/public/css/backend-custom.css
+++ b/public/css/backend-custom.css
@@ -775,7 +775,7 @@ textarea.form-control { max-width: 100%; min-height: 50px; }
 .skin-blue-light .sidebar-menu>li.header {     background-color: #272D37 ;   color: #ddd; font-weight: bold; }
 
 .sidebar-menu .treeview-menu>li>a { font-size: 13px; white-space: normal; }
-.skin-blue-light .main-header .logo { height: 53px; line-height: 53px; background-color: #fff; color: var(--theme-co); font-family: 'Fira Sans', sans-serif;}
+.skin-blue-light .main-header .logo { height: 53px; line-height: 53px; background-color: #272D37; color: var(--theme-co); font-family: 'Fira Sans', sans-serif;}
 .btn-primary { color: #fff; background-color: var(--theme-co); border-color: rgba(0,0,0,.1);}
 .btn-primary:hover {background: rgba(0,0,0,.8);}
 .skin-blue-light .main-header .logo:hover, .skin-blue-light .main-header .navbar .sidebar-toggle:hover {     background: rgba(0,0,0,.1);
